force-app/main/default/objects/Quota_Details_DEC__c/Quota_Details_DEC__c.object-meta.xml
<CustomObject>
    <description>Quota Detail for Commission Report</description>
    <label>( Deprecated ) Quota Detail DEC</label>
    <nameField>
        <displayFormat>QD-{000}</displayFormat>
        <label>Quota Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>( Deprecated ) Quota Detail DEC</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>