force-app/main/default/objects/Quota_Details_DEC__c/fields/Base_Rate_LCY__c.field-meta.xml
<CustomField>
    <fullName>Base_Rate_LCY__c</fullName>
    <description>Base Rate LCY</description>
    <inlineHelpText>Base Rate LCY</inlineHelpText>
    <label>Base Rate LCY</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Percent</type>
</CustomField>