force-app/main/default/objects/Quota_Details_DEC__c/fields/Business_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Group_Name__c</fullName>
    <description>Business Group Name</description>
    <inlineHelpText>Business Group Name</inlineHelpText>
    <label>Business Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>