force-app/main/default/objects/Quota_Details_DEC__c/fields/M_1_Quota__c.field-meta.xml
<CustomField>
    <fullName>M_1_Quota__c</fullName>
    <description>M 1 Quota</description>
    <inlineHelpText>M 1 Quota</inlineHelpText>
    <label>M 1 Quota</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>