force-app/main/default/objects/Quota_Details_DEC__c/fields/Payment_Currency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Currency__c</fullName>
    <description>Payment Currency</description>
    <inlineHelpText>Payment Currency</inlineHelpText>
    <label>Payment Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>