force-app/main/default/objects/Quota_Details_DEC__c/fields/Person_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Person_Hire_Date__c</fullName>
    <description>Person Hire Date</description>
    <inlineHelpText>Person Hire Date</inlineHelpText>
    <label>Person Hire Date</label>
    <type>Date</type>
</CustomField>