force-app/main/default/objects/Quota_Details_DEC__c/fields/Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Person_Name__c</fullName>
    <description>Person Name</description>
    <inlineHelpText>Person Name</inlineHelpText>
    <label>Person Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>