force-app/main/default/objects/Quota_Details_DEC__c/fields/Quarter_Name__c.field-meta.xml
<CustomField>
    <fullName>Quarter_Name__c</fullName>
    <description>Quarter Name</description>
    <inlineHelpText>Quarter Name</inlineHelpText>
    <label>Quarter Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>