force-app/main/default/objects/Quota_Details_DEC__c/fields/Quarter_Variable__c.field-meta.xml
<CustomField>
    <fullName>Quarter_Variable__c</fullName>
    <description>Quarter Variable</description>
    <inlineHelpText>Quarter Variable</inlineHelpText>
    <label>Quarter Variable</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>