force-app/main/default/objects/Quota_Details_DEC__c/fields/Quarter_Variable_Prorated_LCY__c.field-meta.xml
<CustomField>
    <fullName>Quarter_Variable_Prorated_LCY__c</fullName>
    <description>Quarter Variable Prorated LCY</description>
    <inlineHelpText>Quarter Variable Prorated LCY</inlineHelpText>
    <label>Quarter Variable Prorated LCY</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>