force-app/main/default/objects/Quota_Details_DEC__c/fields/Quota_Currency__c.field-meta.xml
<CustomField>
    <fullName>Quota_Currency__c</fullName>
    <description>Quota Currency</description>
    <inlineHelpText>Quota Currency</inlineHelpText>
    <label>Quota Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>