force-app/main/default/objects/Quota_Details_DEC__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Region</description>
    <inlineHelpText>Region</inlineHelpText>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>