force-app/main/default/objects/Quota_Details_DEC__c/fields/Variable_Weightings__c.field-meta.xml
<CustomField>
    <fullName>Variable_Weightings__c</fullName>
    <description>Variable Weightings</description>
    <inlineHelpText>Variable Weightings</inlineHelpText>
    <label>Variable Weightings</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>