force-app/main/default/objects/Quota_Details_DEC__c/fields/Year_Name__c.field-meta.xml
<CustomField>
    <fullName>Year_Name__c</fullName>
    <description>Year Name</description>
    <inlineHelpText>Year Name</inlineHelpText>
    <label>Year Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>